Fix searching with date filter

--- a/imports/ui/coursesearch.html
+++ b/imports/ui/coursesearch.html
@@ -82,7 +82,7 @@
                 </div>
                 <div id="timeform" class="panel-body panel-collapse collapse in">
                   <div class="row">
-                    <label for="timeofday_filter" class="col-sm-1 col-xs-2">Shortcut</label>
+                    <label for="timeofday_filter" class="col-sm-1 col-xs-2"></label>
                     <div class="btn-group">
                       {{#each timesofday}}
                         {{> timeofdaybtn val=this }}
