Add button to scrape sequentially

--- a/imports/ui/scraper.html
+++ b/imports/ui/scraper.html
@@ -1,6 +1,9 @@
 <template name="scraper">
   <form class="scrape-all">
-    <input type="button" value="Scrape all classes" />
+    <input type="button" value="Scrape all at once" />
+  </form>
+  <form class="scrape-all-sync">
+    <input type="button" value="Scrape all, studio by studio" />
   </form>
 
   <form class="scrape-mbo-page">
