Tweak mobile look and update packages

--- a/imports/ui/coursesearch.html
+++ b/imports/ui/coursesearch.html
@@ -7,7 +7,7 @@
         </div>
         <div class="panel-heading">
           <h1 class="panel-title main-accordion">
-            <a class="accordion-toggle" data-toggle="collapse" href="#filterform">Matching Classes - {{availableCount}}</a>
+            <a class="accordion-toggle" data-toggle="collapse" href="#filterform">{{availableCount}} Classes Found</a>
           </h1>
 
           <!--
