--- a/imports/ui/coursetable.html
+++ b/imports/ui/coursetable.html
@@ -1,20 +1,22 @@
 <template name="coursetable">
-  <table class="table table-striped table-hover">
-    <thead> <tr>
-      <th class="col-xs-3">Class</th>
-      <th class="col-xs-1">Day</th>
-      <th class="col-xs-1">Time</th>
-      <th class="col-xs-2">Teacher</th>
-      <th class="col-xs-2">Studio</th>
-      <th class="col-xs-1">Style</th>
-      <th class="col-xs-1">Area</th>
-    </tr> </thead>
-    <tbody>
-      {{#each courses}}
-        {{> course courseData=this setCourseFunc=setCourseFunc }}
-      {{/each}}
-    </tbody>
-  </table>
+  <div class="table-wrapper">
+    <table class="table table-striped table-hover">
+      <thead> <tr>
+        <th class="col-xs-3">Class</th>
+        <th class="col-xs-1">Day</th>
+        <th class="col-xs-2">Time</th>
+        <th class="col-xs-2">Studio</th>
+        <th class="col-xs-2">Teacher</th>
+        <th class="col-xs-1">Style</th>
+        <th class="col-xs-1">Area</th>
+      </tr> </thead>
+      <tbody>
+        {{#each courses}}
+          {{> course courseData=this setCourseFunc=setCourseFunc }}
+        {{/each}}
+      </tbody>
+    </table>
+  </div>
 
   {{> coursemodal activeCourse=activeCourse }}
 </template>
