Add footer and "About" popup

--- a/imports/ui/coursesearch.html
+++ b/imports/ui/coursesearch.html
@@ -3,7 +3,7 @@
     <div class="panel-group">
       <header>
         <div class="panel-heading main-title">
-          <h1>Yogi's Choice</h1>
+          <h1>Yogi's Choice - London</h1>
         </div>
         <div class="panel-heading">
           <h1 class="panel-title main-accordion">
@@ -157,6 +157,8 @@
     </div>
 
     {{> coursetable courses=courses }}
+
+    {{> footer }}
   </div>
 </template>
 
