--- a/imports/ui/coursetable.html
+++ b/imports/ui/coursetable.html
@@ -49,10 +49,23 @@
           </p>
         </div>
 
-        <div class="modal-footer">
-          <a href="{{url}}" target="_blank"><button type="button" class="btn btn-primary">Share</button></a>
-          <a href="{{url}}" target="_blank"><button type="button" class="btn btn-primary">Donate</button></a>
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <div class="modal-footer coursemodal-footer">
+          <ul>
+            <li>
+              <a href="{{url}}" target="_blank"><button type="button" class="btn btn-primary">Share</button></a>
+            </li>
+            <li class="donate-btn">
+              <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                <input type="hidden" name="cmd" value="_s-xclick">
+                <input type="hidden" name="hosted_button_id" value="2LHLWQ5FNF7BG">
+                <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+              </form>
+            </li>
+            <li>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </li>
+          </ul>
         </div>
         {{/with}}
       </div>
