--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <title>Aggregate Class Calendar</title>
+  <title>Yogi's Choice - London</title>
+  <meta property="og:url"         content="http://yogischoice.net" />
+  <meta property="og:type"        content="website" />
+  <meta property="og:title"       content="Yogi's Choice - London" />
+  <meta property="og:description" content="Yogi's Choice lets you find the right class, studio, or teacher, all in one place." />
+  <meta property="og:image"       content="http://www.yogischoice.net/" />
 </head>
 
