--- a/imports/ui/footer.html
+++ b/imports/ui/footer.html
@@ -8,6 +8,9 @@
         <button type="button" class="btn btn-default about-btn">About</button>
       </li>
       <li>
+        <iframe src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Fyogischoice.net&layout=button&size=large&mobile_iframe=true&appId=335141010239501&width=73&height=28" width="73" height="28" style="border:none;overflow:hidden;margin-top:3px" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+      </li>
+      <li>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="2LHLWQ5FNF7BG">
