Cleanup for release

--- a/imports/ui/coursesearch.html
+++ b/imports/ui/coursesearch.html
@@ -3,7 +3,17 @@
     <div class="panel-group">
       <header>
         <div class="panel-heading main-title">
-          <h1>Yogi's Choice - London</h1>
+          <div class="row">
+            <div class="col-xs-4 col-sm-3 col-md-2">
+              <img class="fit-image" src="/yogischoice-icon.png">
+            </div>
+            <div class="title-list col-xs-8 col-sm-9 col-md-10">
+              <ul>
+                <li><h1 class="bottom-line">Yogi's Choice</h1></li>
+                <li><h1>London</h1></li>
+              </ul>
+            </div>
+          </div>
         </div>
         <div class="panel-heading">
           <h1 class="panel-title main-accordion">
