--- a/imports/ui/footer.html
+++ b/imports/ui/footer.html
@@ -3,7 +3,7 @@
   <div class="footer-float">
   </div>
   <div class="footer-fixed">
-    <ul class="footer-list">
+    <ul>
       <li>
         <button type="button" class="btn btn-default about-btn">About</button>
       </li>
@@ -55,15 +55,24 @@
           </div>
           <h3>Giving Back</h3>
           <p>Yogi's Choice is provided as a free service to encourage new connections in the yoga world.</p>
-          <p>In return, we ask that you give back by sharing Yogi's Choice on social media, or contributing towards servers and upkeep through financial donation.</p>
-          <p>Any contribution will be greatly and warmly appreciated.</p>
-
-          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="2LHLWQ5FNF7BG">
-            <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-          </form>
+          <p>In return, we ask that you give back by sharing Yogi's Choice on social media, or contributing financially towards servers and upkeep through donations.</p>
+          <p>Any contribution, even £1 or £3, will be greatly and warmly appreciated.</p>
+          <div class="row center-button">
+            <div class="col-xs-4">
+              <iframe src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Fyogischoice.net&layout=button&size=large&mobile_iframe=true&appId=335141010239501&width=73&height=28" width="73" height="28" style="border:none;overflow:hidden;margin-top:3px" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+            </div>
+            <div class="col-xs-4 donate-btn">
+              <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                <input type="hidden" name="cmd" value="_s-xclick">
+                <input type="hidden" name="hosted_button_id" value="2LHLWQ5FNF7BG">
+                <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+              </form>
+            </div>
+            <div class="col-xs-4">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
