--- a/imports/ui/coursesearch.html
+++ b/imports/ui/coursesearch.html
@@ -7,10 +7,16 @@
             <div class="col-xs-4 col-sm-3 col-md-2">
               <img class="fit-image" src="/yogischoice-icon.png">
             </div>
-            <div class="title-list col-xs-8 col-sm-9 col-md-10">
+            <div class="title-list col-xs-8 col-sm-4 col-md-3">
               <ul>
                 <li><h1 class="bottom-line">Yogi's Choice</h1></li>
                 <li><h1>London</h1></li>
+              </ul>
+            </div>
+            <div class="tagline-list col-xs-12 col-sm-5 col-md-7 clearfix">
+              <ul>
+                <li><h4>Trouble finding the perfect yoga class?</h4></li>
+                <li><h4>Discover it here, all in one tab.</h4></li>
               </ul>
             </div>
           </div>
