--- a/imports/ui/coursetable.html
+++ b/imports/ui/coursetable.html
@@ -64,7 +64,7 @@
               </form>
             </li>
             <li>
-              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </li>
           </ul>
         </div>
