--- a/imports/ui/fixedheader.html
+++ b/imports/ui/fixedheader.html
@@ -1,11 +1,9 @@
-<template name="footer">
+<template name="fixedheader">
 
-  <div class="footer-float">
-  </div>
-  <div class="footer-fixed">
+  <div class="header-fixed">
     <ul>
       <li>
-        <button type="button" class="btn btn-default about-btn">About</button>
+        <button type="button" class="btn btn-primary about-btn">About</button>
       </li>
       <li>
         <iframe src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Fyogischoice.net&layout=button&size=large&mobile_iframe=true&appId=335141010239501&width=73&height=28" width="73" height="28" style="border:none;overflow:hidden;margin-top:3px" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
@@ -17,6 +15,9 @@
           <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
+      </li>
+      <li>
+        <p>Help keep Yogi's Choice free</p>
       </li>
     </ul>
   </div>
