Change contact email

--- a/imports/ui/aboutmodal.html
+++ b/imports/ui/aboutmodal.html
@@ -19,7 +19,7 @@
             <div class="col-xs-12 col-sm-6"><img class="fit-image" src="/jon-pic.jpg"></div>
           </div>
           <h3>Contact</h3>
-          <p>Please contact <a href="mailto:info@yogischoice.net?Subject=Hello%20Yogi!" target="_top">info@yogischoice.net</a> regarding any questions, concerns, or feedback.</p>
+          <p>Please contact <a href="mailto:joncyoga@gmail.com?Subject=Hello%20Yogi!" target="_top">joncyoga@gmail.com</a> regarding any questions, concerns, or feedback.</p>
           <h3>Supporting this project</h3>
           <p>Yogi's Choice is provided to foster connections in the yoga world.</p>
           <p>If you enjoy using it or find a great class, we ask that you participate by sharing Yogi's Choice on social media, or contributing financially towards new feature development and server maintenance through donations.</p>
