Speedup some db calls

--- a/client/main.html
+++ b/client/main.html
@@ -4,7 +4,7 @@
   <meta property="og:url"         content="http://yogischoice.net" />
   <meta property="og:type"        content="website" />
   <meta property="og:title"       content="Yogi's Choice - London" />
-  <meta property="og:description" content="Yogi's Choice lets you find the right class, studio, or teacher, all in one place." />
+  <meta property="og:description" content="Trouble finding yoga classes?  Discover them here, all in one place." />
   <meta property="og:image"       content="http://www.yogischoice.net/" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
