--- a/imports/ui/coursesearch.html
+++ b/imports/ui/coursesearch.html
@@ -38,7 +38,7 @@
           -->
 
           {{#if showAlert}}
-            <div class="alert alert-warning alert-dismissible" role="alert">
+            <div class="alert alert-warning alert-dismissible alert-margin" role="alert">
               <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               Over {{availableCount}} results returned, please limit search criteria.
             </div>
