Fix up Sunday "Tomorrow" issue

--- a/imports/ui/coursesearch.html
+++ b/imports/ui/coursesearch.html
@@ -245,5 +245,5 @@
 </template>
 
 <template name="dayshortcutbtn">
-  <input type="button" class="dayofweekshortcut_filter btn btn-default" value="{{val}}" />
+  <input type="button" class="dayofweekshortcut_filter btn btn-default {{isActive val}}" value="{{val}}" />
 </template>
