Add Feedback button and modal

--- a/imports/ui/fixedheader.html
+++ b/imports/ui/fixedheader.html
@@ -3,7 +3,10 @@
   <div class="header-fixed">
     <ul>
       <li>
-        <button type="button" class="btn btn-primary about-btn">About</button>
+        <button type="button" class="btn btn-default about-btn">About</button>
+      </li>
+      <li>
+        <button type="button" class="btn btn-default feedback-btn">Feedback</button>
       </li>
       <li>
         <iframe src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Fyogischoice.net&layout=button&size=large&mobile_iframe=true&appId=335141010239501&width=73&height=28" width="73" height="28" style="border:none;overflow:hidden;margin-top:3px" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
@@ -23,4 +26,5 @@
   </div>
 
   {{> aboutmodal }}
+  {{> feedbackmodal }}
 </template>
