Cleanup from deployment

--- a/imports/ui/feedbackmodal.html
+++ b/imports/ui/feedbackmodal.html
@@ -1,6 +1,6 @@
 <template name="feedbackmodal">
   <div class="modal fade" id="feedbackmodal">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-md">
       <div class="modal-content feedback-modalcontent">
         <div class="modal-body feedback-modalbody">
           <div class="row">
